HOMEWORK №2 Luiqbase migration scripts, DDL scripts, and migration scripts have been created.